# ctx

./: .clang-format  .clang-format.ignore  .clang-tidy  .gitignore  .travis.yml  .ycm_extra_conf.py  AUTHORS.md  CMakeLists.txt  NOTICE  README.md  configure  ctx_exception.h  libctx  setup.cfg  update_from_sister_repos.sh  update_from_sisters.lib.sh
.github/workflows/: ci.yaml
ci/: build.sh
ci/jobs/: code_style.sh  compile_test.sh
cmake/: CheckCxxAbi.cmake  DepsLibCtx.txt  IncludeKrimsCmakeModule.cmake  SetupBuildQChem.cmake  SetupCompiler.cmake  SetupLibCtx.txt  ctxConfig.cmake.in  findCatch.cmake  findKrims.cmake  findQchemLibctx.cmake  install_package.cmake  setup_dependencies.cmake  setup_optional.cmake
examples/: CMakeLists.txt
examples/simple/: CMakeLists.txt  main.cc
scripts/: run-clang-tidy.py
src/: CMakeLists.txt  libctx
src/ctx/: CMakeLists.txt  CheaplyCopyable_i.hh  CtxExceptionBase.hh  CtxMap.cc  CtxMap.hh  CtxMapAccessor.hh  CtxMapIterator.hh  CtxMapValue.cc  CtxMapValue.hh  IsCheaplyCopyable.hh  IsComplexNumber.hh  PamMap.cc  PamMap.hh  PamMapAccessor.hh  PamMapIterator.hh  PamMapValue.cc  PamMapValue.hh  README.md  config.hh.in  context.h  ctx.hh  ctx_ptr.h  ctx_ref.h  demangle.cc  demangle.hh  exceptions.hh  libctx.h  libctx_namespace.hh  params.cc  params.h  rc_ptr.h  root_storage.h  version.cc  version.hh
src/libctx/: README.md  context.C  context.h  ctx_exception.h  ctx_ptr.h  ctx_ref.h  libctx.h  params.C  params.h  rc_ptr.h  root_storage.h
templates/: cc.template  cmake.template  hh.template  tmpl_settings.vim
tests/: CMakeLists.txt  CtxMapTests.cc  PamMapTests.cc  contextTests.cc  ctx_ptrTests.cc  ctx_refTests.cc  main.cc  paramsTests.cc  rc_ptrTests.cc
